GoalTracker/force-app/main/default/objects/Giving_Totals__c/Giving_Totals__c.object-meta.xml
<CustomObject>
    <description>AQ_Custom</description>
    <label>Giving Totals</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Giving Totals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Giving Totals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>