GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>AQ_Custom</description>
    <inlineHelpText>Master-detail relationship to Account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Giving Totals</relationshipLabel>
    <relationshipName>Giving_Totals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>