GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Cash_Giving_Total_CFY__c.field-meta.xml
<CustomField>
    <fullName>Cash_Giving_Total_CFY__c</fullName>
    <description>AQ_Custom</description>
    <inlineHelpText>Account&apos;s cash giving total current fiscal year</inlineHelpText>
    <label>Cash Giving Total CFY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>