GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Cash_Giving_Total_P1__c.field-meta.xml
<CustomField>
    <fullName>Cash_Giving_Total_P1__c</fullName>
    <description>AQ_Custom</description>
    <inlineHelpText>Account&apos;s cash giving total previous fiscal year</inlineHelpText>
    <label>Cash Giving Total P1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>