GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Cash_Giving_Total_P2__c.field-meta.xml
<CustomField>
    <fullName>Cash_Giving_Total_P2__c</fullName>
    <description>AQ_Custom</description>
    <inlineHelpText>Account&apos;s Cash Giving Total Previous fiscal year 2</inlineHelpText>
    <label>Cash Giving Total P2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>