GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Cash_Giving_Total_P3__c.field-meta.xml
<CustomField>
    <fullName>Cash_Giving_Total_P3__c</fullName>
    <description>AQ_Custom</description>
    <inlineHelpText>Account&apos;s cash giving total for previous fiscal year 3</inlineHelpText>
    <label>Cash Giving Total P3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>