GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/CFY_Donor__c.field-meta.xml
<CustomField>
    <fullName>CFY_Donor__c</fullName>
    <description>y/n flag if the constituent is a donor in the current fiscal year</description>
    <formula>IF (Cash_Giving_Total_CFY__c &gt;0, &apos;Y&apos;,&apos;N&apos;)</formula>
    <inlineHelpText>y/n flag if the constituent is a donor in the current fiscal year</inlineHelpText>
    <label>CFY_Donor</label>
    <type>Text</type>
</CustomField>