GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/CFY_Donor_Num__c.field-meta.xml
<CustomField>
    <fullName>CFY_Donor_Num__c</fullName>
    <description>Uses 1 to denote yes/true and 0 to denote no/false</description>
    <formula>IF ( Cash_Giving_Total_CFY__c &gt; 0 , 1, 0)</formula>
    <inlineHelpText>Uses 1 to denote yes/true and 0 to denote no/false</inlineHelpText>
    <label>CFY_Donor (Num)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>