GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Circle_Membership_Qualify__c.field-meta.xml
<CustomField>
    <fullName>Circle_Membership_Qualify__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Circle Membership the Account Qualifies for through Donor Reporting Total</description>
    <label>Circle Membership Qualify</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Giving Totals (Circle Membership Qualify)</relationshipLabel>
    <relationshipName>Giving_Totals_Cicle_Membership</relationshipName>
    <type>Lookup</type>
</CustomField>