GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Consecutive_Years_of_Giving__c.field-meta.xml
<CustomField>
    <fullName>Consecutive_Years_of_Giving__c</fullName>
    <description>AQ_Custom</description>
    <inlineHelpText>Excludes current year</inlineHelpText>
    <label>Consecutive Years of Giving</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>