GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Largest_Gift__c.field-meta.xml
<CustomField>
    <fullName>Largest_Gift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AQ_Custom</description>
    <inlineHelpText>Lookup to Account&apos;s Largest Gift</inlineHelpText>
    <label>Largest Gift</label>
    <referenceTo>AQB__Gift__c</referenceTo>
    <relationshipLabel>Giving Totals (Largest Gift)</relationshipLabel>
    <relationshipName>Giving_Totals1</relationshipName>
    <type>Lookup</type>
</CustomField>