GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Largest_Gift_Amount__c.field-meta.xml
<CustomField>
    <fullName>Largest_Gift_Amount__c</fullName>
    <description>AQ_Custom</description>
    <inlineHelpText>Account&apos;s largest gift amount.</inlineHelpText>
    <label>Largest Gift Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>