GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Largest_Gift_Date__c.field-meta.xml
<CustomField>
    <fullName>Largest_Gift_Date__c</fullName>
    <description>AQ_Custom</description>
    <inlineHelpText>Account&apos;s largest gift date</inlineHelpText>
    <label>Largest Gift Date</label>
    <type>Date</type>
</CustomField>