GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Last_Gift__c.field-meta.xml
<CustomField>
    <fullName>Last_Gift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AQ_Custom</description>
    <inlineHelpText>Lookup to Account&apos;s last gift</inlineHelpText>
    <label>Last Gift</label>
    <referenceTo>AQB__Gift__c</referenceTo>
    <relationshipLabel>Giving Totals</relationshipLabel>
    <relationshipName>Giving_Totals</relationshipName>
    <type>Lookup</type>
</CustomField>