GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Last_Gift_Amount_Libraries__c.field-meta.xml
<CustomField>
    <fullName>Last_Gift_Amount_Libraries__c</fullName>
    <description>AQ_Custom</description>
    <inlineHelpText>Account&apos;s last gift amount to a University Libraries designation</inlineHelpText>
    <label>Last Gift Amount Libraries</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>