GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Last_Gift_College_of_Engineering__c.field-meta.xml
<CustomField>
    <fullName>Last_Gift_College_of_Engineering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AQ_Custom</description>
    <inlineHelpText>Lookup to Account&apos;s last gift to College of Engineering designation</inlineHelpText>
    <label>Last Gift College of Engineering</label>
    <referenceTo>AQB__Gift__c</referenceTo>
    <relationshipLabel>Giving Totals (Last Gift College of Engineering)</relationshipLabel>
    <relationshipName>Giving_Totals3</relationshipName>
    <type>Lookup</type>
</CustomField>