GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Last_Gift_Computer_Science__c.field-meta.xml
<CustomField>
    <fullName>Last_Gift_Computer_Science__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AQ_Custom</description>
    <inlineHelpText>Lookup to Account&apos;s last gift to School of Computer Science designation</inlineHelpText>
    <label>Last Gift Computer Science</label>
    <referenceTo>AQB__Gift__c</referenceTo>
    <relationshipLabel>Giving Totals (Last Gift Computer Science)</relationshipLabel>
    <relationshipName>Giving_Totals4</relationshipName>
    <type>Lookup</type>
</CustomField>