GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Last_Gift_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Gift_Date__c</fullName>
    <description>AQ_Custom</description>
    <inlineHelpText>Account&apos;s last gift date</inlineHelpText>
    <label>Last Gift Date</label>
    <type>Date</type>
</CustomField>