GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Last_Gift_Date_Computer_Science__c.field-meta.xml
<CustomField>
    <fullName>Last_Gift_Date_Computer_Science__c</fullName>
    <description>AQ_Custom</description>
    <inlineHelpText>Account&apos;s last gift date to School of Computer Science designation</inlineHelpText>
    <label>Last Gift Date Computer Science</label>
    <type>Date</type>
</CustomField>