GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Last_Gift_Date_Engineering__c.field-meta.xml
<CustomField>
    <fullName>Last_Gift_Date_Engineering__c</fullName>
    <description>AQ_Custom</description>
    <inlineHelpText>Account&apos;s last gift date to College of Engineering designation</inlineHelpText>
    <label>Last Gift Date Engineering</label>
    <type>Date</type>
</CustomField>