GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Last_Gift_Date_Fine_Arts__c.field-meta.xml
<CustomField>
    <fullName>Last_Gift_Date_Fine_Arts__c</fullName>
    <description>AQ_Custom</description>
    <inlineHelpText>Account&apos;s last gift date to College of Fine Arts designation</inlineHelpText>
    <label>Last Gift Date Fine Arts</label>
    <type>Date</type>
</CustomField>