GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Last_Gift_Date_Heinz__c.field-meta.xml
<CustomField>
    <fullName>Last_Gift_Date_Heinz__c</fullName>
    <description>AQ_Custom</description>
    <inlineHelpText>Account&apos;s last gift date to Heinz College designation</inlineHelpText>
    <label>Last Gift Date Heinz</label>
    <type>Date</type>
</CustomField>