GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Last_Gift_Date_Libraries__c.field-meta.xml
<CustomField>
    <fullName>Last_Gift_Date_Libraries__c</fullName>
    <description>AQ_Custom</description>
    <inlineHelpText>Account&apos;s last gift date to University Libraries designation</inlineHelpText>
    <label>Last Gift Date Libraries</label>
    <type>Date</type>
</CustomField>