GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Last_Gift_Date_Mellon__c.field-meta.xml
<CustomField>
    <fullName>Last_Gift_Date_Mellon__c</fullName>
    <description>AQ_Custom</description>
    <inlineHelpText>Account&apos;s last gift date to Mellon College of Science designation</inlineHelpText>
    <label>Last Gift Date Mellon</label>
    <type>Date</type>
</CustomField>