GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Last_Gift_Date_Tepper__c.field-meta.xml
<CustomField>
    <fullName>Last_Gift_Date_Tepper__c</fullName>
    <description>AQ_Custom</description>
    <inlineHelpText>Account&apos;s last gift date to a Tepper designation</inlineHelpText>
    <label>Last Gift Date Tepper</label>
    <type>Date</type>
</CustomField>