GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Last_Gift_Dietrich__c.field-meta.xml
<CustomField>
    <fullName>Last_Gift_Dietrich__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AQ_Custom</description>
    <inlineHelpText>Lookup to Account&apos;s last gift to Dietrich College designation</inlineHelpText>
    <label>Last Gift Dietrich</label>
    <referenceTo>AQB__Gift__c</referenceTo>
    <relationshipLabel>Giving Totals (Last Gift Dietrich)</relationshipLabel>
    <relationshipName>Giving_Totals6</relationshipName>
    <type>Lookup</type>
</CustomField>