GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Last_Gift_Fine_Arts__c.field-meta.xml
<CustomField>
    <fullName>Last_Gift_Fine_Arts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AQ_Custom</description>
    <inlineHelpText>Lookup to Account&apos;s last gift to College of Fine Arts designation</inlineHelpText>
    <label>Last Gift Fine Arts</label>
    <referenceTo>AQB__Gift__c</referenceTo>
    <relationshipLabel>Giving Totals (Last Gift Fine Arts)</relationshipLabel>
    <relationshipName>Giving_Totals9</relationshipName>
    <type>Lookup</type>
</CustomField>