GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Last_Gift_Heinz__c.field-meta.xml
<CustomField>
    <fullName>Last_Gift_Heinz__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AQ_Custom</description>
    <inlineHelpText>Lookup to Account&apos;s last gift to Heinz College designation</inlineHelpText>
    <label>Last Gift Heinz</label>
    <referenceTo>AQB__Gift__c</referenceTo>
    <relationshipLabel>Giving Totals (Last Gift Heinz)</relationshipLabel>
    <relationshipName>Giving_Totals8</relationshipName>
    <type>Lookup</type>
</CustomField>