GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Last_Gift_Libraries__c.field-meta.xml
<CustomField>
    <fullName>Last_Gift_Libraries__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AQ_Custom</description>
    <inlineHelpText>Lookup to Account&apos;s last gift to University Libraries designation</inlineHelpText>
    <label>Last Gift Libraries</label>
    <referenceTo>AQB__Gift__c</referenceTo>
    <relationshipLabel>Giving Totals (Last Gift Libraries)</relationshipLabel>
    <relationshipName>Giving_Totals7</relationshipName>
    <type>Lookup</type>
</CustomField>