GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Last_Gift_Mellon__c.field-meta.xml
<CustomField>
    <fullName>Last_Gift_Mellon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AQ_Custom</description>
    <inlineHelpText>Lookup to Account&apos;s last gift to Mellon College of Science designation</inlineHelpText>
    <label>Last Gift Mellon</label>
    <referenceTo>AQB__Gift__c</referenceTo>
    <relationshipLabel>Giving Totals (Last Gift Mellon)</relationshipLabel>
    <relationshipName>Giving_Totals5</relationshipName>
    <type>Lookup</type>
</CustomField>