GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Last_Gift_Tepper__c.field-meta.xml
<CustomField>
    <fullName>Last_Gift_Tepper__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AQ_Custom</description>
    <inlineHelpText>Lookup to Account&apos;s last gift to a Tepper designation</inlineHelpText>
    <label>Last Gift Tepper</label>
    <referenceTo>AQB__Gift__c</referenceTo>
    <relationshipLabel>Giving Totals (Last Gift Tepper)</relationshipLabel>
    <relationshipName>Giving_Totals2</relationshipName>
    <type>Lookup</type>
</CustomField>