GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Lifetime_Cash__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Cash__c</fullName>
    <description>AQ_Custom</description>
    <inlineHelpText>Lifetime Cash giving from Account</inlineHelpText>
    <label>Lifetime Cash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>