GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Lifetime_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Commitment__c</fullName>
    <description>AQ_Custom</description>
    <inlineHelpText>Lifetime Commitment of Account</inlineHelpText>
    <label>Lifetime Commitment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>