GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Lifetime_Commitment_Fine_Arts__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Commitment_Fine_Arts__c</fullName>
    <description>AQ_Custom</description>
    <inlineHelpText>Account&apos;s Lifetime Commitment to College of Fine Arts designations</inlineHelpText>
    <label>Lifetime Commitment Fine Arts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>