GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Lifetime_Commitment_Mellon__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Commitment_Mellon__c</fullName>
    <description>AQ_Custom</description>
    <inlineHelpText>Account&apos;s Lifetime Commitment to Mellon College of Science designations</inlineHelpText>
    <label>Lifetime Commitment Mellon</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>