GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Lifetime_Reporting_Donor_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Reporting_Donor_Commitment__c</fullName>
    <label>Lifetime Reporting Donor Commitment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>