GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Next_Pledge_Payment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Pledge_Payment_Due_Date__c</fullName>
    <description>AQ_Custom</description>
    <inlineHelpText>Next pledge payment to be made date</inlineHelpText>
    <label>Next Pledge Payment Due Date</label>
    <type>Date</type>
</CustomField>