GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Outstanding_Pledge_Balances__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Pledge_Balances__c</fullName>
    <description>AQ_Custom</description>
    <inlineHelpText>Total balance of all outstanding pledge payments</inlineHelpText>
    <label>Outstanding Pledge Balances</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>