GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Planned_Giver__c.field-meta.xml
<CustomField>
    <fullName>Planned_Giver__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If TRUE, then the Contacts on this Account have Planned Giving</description>
    <label>Planned Giver</label>
    <type>Checkbox</type>
</CustomField>