GoalTracker/force-app/main/default/objects/Giving_Totals__c/fields/Total_Years_Giving__c.field-meta.xml
<CustomField>
    <fullName>Total_Years_Giving__c</fullName>
    <description>AQ_Custom</description>
    <inlineHelpText>Account&apos;s total number of years giving</inlineHelpText>
    <label>Total Years Giving</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>